--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     </section>
     
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/client.js"></script>
+    <script src="public/client.js"></script>
 </body>
 </html>
